@@ -84,7 +84,6 @@
             'tests/LinkHighlightTest.cpp',
             'tests/ListenerLeakTest.cpp',
             'tests/MemoryInfo.cpp',
-            'tests/MemoryInstrumentationTest.cpp',
             'tests/OpaqueRectTrackingContentLayerDelegateTest.cpp',
             'tests/OpenTypeVerticalDataTest.cpp',
             'tests/PODArenaTest.cpp',
