@@ -38,6 +38,7 @@
             'Tests/WTF/HashMap.cpp',
             'Tests/WTF/MathExtras.cpp',
             'Tests/WTF/MediaTime.cpp',
+            'Tests/WTF/MemoryInstrumentationTest.cpp',
             'Tests/WTF/RedBlackTree.cpp',
             'Tests/WTF/SaturatedArithmeticOperations.cpp',
             'Tests/WTF/StringBuilder.cpp',
