@@ -1,3 +1,12 @@
+2012-10-11  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Web Inspector: NMI move instrumentation tests from chromium test set to the cross platform test set.
+        https://bugs.webkit.org/show_bug.cgi?id=99046
+
+        Reviewed by Yury Semikhatsky.
+
+        * TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp:
+
 2012-10-11  Takashi Sakamoto  <tasak@google.com>
 
         [WebKit IDL] remove all module from idl files.
